--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.17.1",
     "react-jss": "^10.8.0",
     "swiper": "^7.0.8"
   },
